--- a/rollback.yaml
+++ b/rollback.yaml
@@ -1,10 +1,10 @@
 ---
-- hosts: "{{ host_name }}"
+- hosts: app_01
   gather_facts: true
   become: true
   vars:
     ansible_ssh_user: "ubuntu"
-    ansible_ssh_private_key_file: "~/.ssh/ttt_dev.pem"
+    ansible_ssh_private_key_file: "~/.ssh/dzung_prikey.pem"
     ansible_python_interpreter: /usr/bin/python3
   
     ansistrano_deploy_from: "{{ build_dir }}/"
