--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,5 +4,6 @@ host_key_checking = false
 retry_files_enabled = false
 replace_dash_in_groups = false
 deprecation_warnings=False
+
 [inventory]
-enable_plugins = host_list, virtualbox, yaml, auto, ini, advanced_host_list, constructed, aws_ec2
+enable_plugins = host_list, virtualbox, yaml, auto, ini, advanced_host_list, constructed, aws_ec2, yaml inventory
