--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,4 +6,4 @@ replace_dash_in_groups = false
 deprecation_warnings=False
 
 [inventory]
-enable_plugins = host_list, virtualbox, yaml, auto, ini, advanced_host_list, constructed, aws_ec2, yaml inventory
+enable_plugins = host_list, virtualbox, yaml, auto, ini, advanced_host_list, constructed, aws_ec2
