--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,7 @@ stdout_callback = debug
 host_key_checking = false
 retry_files_enabled = false
 replace_dash_in_groups = false
-deprecation_warnings=False
+deprecation_warnings= false
 
 [inventory]
 enable_plugins = host_list, virtualbox, yaml, auto, ini, advanced_host_list, constructed, aws_ec2
